--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,24 +28,22 @@
 }
 
 .dropdown-content1 {
-  display: none;
-  position: absolute;
+  /* display: none; */
+  /* position: absolute; */
   background-color: #f9f9f9;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
-.dropdown-content1 a {
+.dropdown-content1 .a {
   color: #002e5d;
-  padding: 12px 16px;
-  text-decoration: none;
-  text-transform: none;
+  /* padding: 12px 16px; */
   display: block;
   text-align: left;
 }
 
-.dropdown-content1 a:hover {
+.dropdown-content1 .a:hover {
   background-color: #f1f1f1;
   color: #efc011;
 }
@@ -63,7 +61,7 @@
   text-decoration: none;
 }
 
-li.dropdown {
+.li.dropdown {
   display: inline-block;
 }
 
@@ -71,21 +69,19 @@ li.dropdown {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
-  min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
-.dropdown-content a {
+.dropdown-content .a {
   color: #002e5d;
-  padding: 12px 16px;
   text-decoration: none;
   text-transform: none;
   display: block;
   text-align: left;
 }
 
-.dropdown-content a:hover {
+.dropdown-content .a:hover {
   background-color: #f1f1f1;
   color: #efc011;
 }
@@ -179,12 +175,6 @@ li.dropdown {
   color: #002e5d;
   border-width: 3px;
 }
-.img2{
-  float: left;
-  width: 320px;
-  height: 200px;
-  padding: 0 10px 0 0;
-}
 
 .text{
   /* text-align:justify; */
@@ -215,12 +205,6 @@ li.dropdown {
   padding-top: 5%;
   margin-left: 290px;
 }
-.img3{
-  float: left;
-  width: 320px;
-  height: 200px;
-  padding: 0 10px 0 0;
-}
 
 .text2{
   text-align:justify;
@@ -241,8 +225,8 @@ li.dropdown {
 
 .headline{
   text-align: justify;
-  margin-top: 7%;
-  margin-left: 23.2%;
+  /* margin-top: 7%;
+  margin-left: 23.2%; */
   text-transform: uppercase;
   font-size: 50px;
 }
