--- a/client/src/App.css
+++ b/client/src/App.css
@@ -109,14 +109,14 @@
 .page-title{
   font-family: 'Raleway', sans-serif;
   color:#002e5d;
+  font-size: 3rem;
   text-transform: uppercase;
 }
 
 .page-title::after{
-  content: "";  
+  content: "";
+  width: 100%;
   display: block;
-  /* margin: -4% auto;  */
-  /* width: 51%;  */
   border-bottom: 2px solid #002e5d;
 }
 
@@ -149,10 +149,9 @@
 }
 
 .byline{
-  font-weight: 400;
+  font-family: 'Raleway', sans-serif;
   font-size: 25px;
-  /* padding-left: 58%;
-  margin-top: -16%; */
+  text-align: left;
 }
 
 /* style for the sort list */
@@ -232,7 +231,6 @@
 }
 
 .headline{
-  text-align: justify;
   /* margin-top: 7%;
   margin-left: 23.2%; */
   text-transform: uppercase;
