--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,9 @@
+*{
+  font-family:'Raleway' , sans-serif;
+
+}
+
+
 .txt{
   font-family:'Raleway' , sans-serif;
 }
@@ -72,16 +78,6 @@ figcaption {
   font-size: 10px;
   text-align: center;
   
-}
-
-.footer-container{
-    display: flex;
-    flex-direction: row;
-}
-
-.footer-container > * {
-  flex: 1 1 33vh;
-  max-width: 33v;
 }
 
 
@@ -285,10 +281,6 @@ figcaption {
 
 }
 
-.footer-text{
-  font-family: 'Raleway', sans-serif;
-  font-size: .5rem;
-}
 
 
 .byline{
